--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,16 @@ REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_MAIN_DB=
 
+#mongodb
+MONGO_STATUS=
+MONGO_HOST=
+MONGO_PORT=
+MONGO_PASSWORD=
+MONGO_USERNAME=
+MONGO_DB=
+MONGO_TIME_OUT=
+MONGO_MAX_NUM=
+
 #log
 LOG_TYPE=daily
 LOG_LEVEL=debug
